--- a/JScourse/JavaScript/index.html
+++ b/JScourse/JavaScript/index.html
@@ -11,6 +11,14 @@
         let a = 10;
         console.log(a)
         console.log("hello")
+        console.log(`the value of a is ${a} and it is number`)
+
+        let age =13
+        let hasTicket = true
+        if (age >= 13 && hasTicket ==true){
+            console.log("allowed")
+        }
+        
     </script>
     
 
